Prevent text zoom on iOS landscape

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -32,6 +32,7 @@ body {
   padding: 25px;
   width: 100%;
   height: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
